--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.1",
     "firebase": "^9.14.0",
+    "formik": "^2.2.9",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-lottie": "^1.2.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint": "8.8.0",
