--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
+    "react-quill": "^2.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
