--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@lexical/react": "^0.6.4",
     "@mui/material": "^5.10.16",
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
+    "lexical": "^0.6.4",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
