--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-quill": "^2.0.0",
