--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-quill": "^2.0.0",
