--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emotion/styled": "^11.10.5",
     "@lexical/react": "^0.6.4",
     "@mui/material": "^5.10.16",
+    "@mui/utils": "^5.10.16",
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
     "lexical": "^0.6.4",
     "next": "12.0.10",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "17.0.2",
