--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lexical/react": "^0.6.4",
     "@mui/material": "^5.10.16",
     "@mui/utils": "^5.10.16",
+    "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
     "formik": "^2.2.9",
     "lexical": "^0.6.4",
